[package]
name = "candle-kernels"
version = "0.9.2"
edition = "2021"

description = "CUDA kernels for Candle"
repository = "https://github.com/huggingface/candle"
keywords = ["blas", "tensor", "machine-learning"]
categories = ["science"]
license = "MIT OR Apache-2.0"

[dependencies]
half = "2.4.1"

[build-dependencies]
cudaforge = "0.1.2"
