[package]
name = "candle-kernels"
version = "0.10.2"
edition = "2021"

description = "CUDA kernels for Candle"
repository = "https://github.com/huggingface/candle"
keywords = ["blas", "tensor", "machine-learning"]
categories = ["science"]
license = "MIT OR Apache-2.0"

[build-dependencies]
cudaforge = "0.1.2"

[dev-dependencies]
half = { version = "2.4.1", features = ["num-traits"] }
cudarc = { version = "0.19.0", features = ["driver", "cuda-version-from-build-system"] }
