[package]
name = "candle-macros"
version.workspace = true
edition.workspace = true
description = "Procedural macros for Candle"
repository.workspace = true
license.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
