[package]
name = "candle-metal-kernels"
version = "0.8.3"
edition = "2021"

description = "Metal kernels for Candle"
repository = "https://github.com/huggingface/candle"
keywords = ["blas", "tensor", "machine-learning"]
categories = ["science"]
license = "MIT OR Apache-2.0"


[dependencies]
metal = { version = "0.27.0", features = ["mps"] }
once_cell = "1.18.0"
thiserror = "1"
tracing = "0.1.37"

[dev-dependencies]
clap = { version = "4.2.4", features = ["derive"] }
half = { version = "2.3.1", features = [
  "num-traits",
  "use-intrinsics",
  "rand_distr",
] }
anyhow = "1"
rand = "0.8.5"
rand_distr = "0.4.3"
