[package]
name = "candle-nn"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
readme = "README.md"

[dependencies]
accelerate-src = { workspace = true, optional = true }
candle = { workspace = true }
half = { workspace = true }
thiserror = { workspace = true }
intel-mkl-src = { workspace = true, optional = true }
num-traits = { workspace = true }
rayon = { workspace = true }
safetensors = { workspace = true }
serde = { workspace = true }
objc2-metal = { workspace = true, optional = true }
candle-metal-kernels = { workspace = true, optional = true }
libc = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
criterion = { workspace = true }

[features]
default = []
accelerate = ["dep:accelerate-src", "candle/accelerate"]

cuda = ["candle/cuda-unlinked"]
cudnn = ["candle/cudnn"]
cuda-unlinked = ["candle/cuda-unlinked"]
cuda-dynamic-linking = ["candle/cuda-dynamic-linking"]
cuda-static-linking = ["candle/cuda-static-linking"]
cuda-dynamic-loading = ["candle/cuda-dynamic-loading"]

mkl = ["dep:intel-mkl-src", "candle/mkl"]
mkl-unlinked = ["dep:intel-mkl-src", "candle/mkl-unlinked"]
mkl-static-linking = ["candle/mkl-static-linking", "intel-mkl-src?/mkl-static-lp64-iomp"]
mkl-dynamic-linking = ["candle/mkl-dynamic-linking", "intel-mkl-src?/mkl-dynamic-lp64-iomp"]

metal = ["candle/metal", "dep:candle-metal-kernels", "dep:objc2-metal"]

[[bench]]
name = "bench_main"
harness = false
