[package]
name = "candle-nn"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
readme = "README.md"

[dependencies]
accelerate-src = { workspace = true, optional = true }
candle = { workspace = true }
half = { workspace = true }
thiserror = { workspace = true }
intel-mkl-src = { workspace = true, optional = true }
num-traits = { workspace = true }
rayon = { workspace = true }
safetensors = { workspace = true }
serde = { workspace = true }
objc2-metal = { workspace = true, optional = true }
candle-metal-kernels = { workspace = true, optional = true }
libc = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
criterion = { workspace = true }

[features]
default = []
accelerate = ["dep:accelerate-src", "candle/accelerate"]
cuda = ["cuda-enabled", "candle/cuda"]
cuda-enabled = ["candle/cuda-enabled"]
cuda-dynamic-linking = ["cuda-enabled", "candle/cuda-dynamic-linking"]
cuda-dynamic-loading = ["cuda-enabled", "candle/cuda-dynamic-loading"]
cuda-static-linking = ["cuda-enabled", "candle/cuda-static-linking"]
cudnn = ["candle/cudnn"]
mkl = ["mkl-enabled", "candle/mkl"]
mkl-enabled = ["dep:intel-mkl-src", "candle/mkl-enabled"]
mkl-static-linking = ["mkl-enabled", "candle/mkl-static-linking"]
mkl-dynamic-linking = ["mkl-enabled", "candle/mkl-dynamic-linking"]
metal = ["candle/metal", "dep:candle-metal-kernels", "dep:objc2-metal"]

[[bench]]
name = "bench_main"
harness = false
