[package]
name = "candle-onnx"
version = "0.8.2"
edition = "2021"

description = "ONNX support for Candle"
repository = "https://github.com/huggingface/candle"
keywords = ["blas", "tensor", "machine-learning"]
categories = ["science"]
license = "MIT OR Apache-2.0"

[dependencies]
candle = { path = "../candle-core", package = "candle-core", version = "0.8.2" }
candle-nn = { path = "../candle-nn", version = "0.8.2" }
prost = "0.12.1"

[build-dependencies]
anyhow = { version = "1", features = ["backtrace"] }
protox = "0.6.0"
prost-build = "0.12.1"

[dev-dependencies]
anyhow = { version = "1", features = ["backtrace"] }
clap = { version = "4.2.4", features = ["derive"] }
