[package]
name = "candle-onnx"
version = "0.9.1"
edition = "2021"

description = "ONNX support for Candle"
repository = "https://github.com/huggingface/candle"
keywords = ["blas", "tensor", "machine-learning"]
categories = ["science"]
license = "MIT OR Apache-2.0"

[dependencies]
candle = { path = "../candle-core", package = "candle-core", version = "0.9.1" }
candle-nn = { path = "../candle-nn", version = "0.9.1" }
prost = "0.14.1"

[build-dependencies]
prost-build = "0.14.1"

[dev-dependencies]
anyhow = { version = "1", features = ["backtrace"] }
clap = { version = "4.5.49", features = ["derive"] }
