[package]
name = "candle-pyo3"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
readme = "README.md"

[lib]
name = "candle"
crate-type = ["cdylib"]

[dependencies]
accelerate-src = { workspace = true, optional = true }
candle = { workspace = true }
candle-nn = { workspace = true }
candle-onnx = { workspace = true, optional = true }
half = { workspace = true }
intel-mkl-src = { workspace = true, optional = true }
pyo3 = { version = "0.27", features = ["extension-module", "abi3-py313"] }
float8 = { workspace = true }

[build-dependencies]
pyo3-build-config = "0.27"

[features]
default = []
accelerate = ["dep:accelerate-src", "candle/accelerate"]

cuda = ["candle/cuda"]
cuda-unlinked = ["candle/cuda-unlinked"]
cuda-dynamic-linking = ["candle/cuda-dynamic-linking"]
cuda-static-linking = ["candle/cuda-static-linking"]
cuda-dynamic-loading = ["candle/cuda-dynamic-loading"]

mkl = ["dep:intel-mkl-src", "candle/mkl"]
mkl-unlinked = ["dep:intel-mkl-src", "candle/mkl-unlinked"]
mkl-static-linking = ["candle/mkl-static-linking", "intel-mkl-src?/mkl-static-lp64-iomp"]
mkl-dynamic-linking = ["candle/mkl-dynamic-linking", "intel-mkl-src?/mkl-dynamic-lp64-iomp"]

onnx = ["dep:candle-onnx"]
