[package]
name = "candle-pyo3"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
readme = "README.md"

[lib]
name = "candle"
crate-type = ["cdylib"]

[dependencies]
accelerate-src = { workspace = true, optional = true }
candle = { workspace = true }
candle-nn = { workspace = true }
candle-onnx = { workspace = true, optional = true }
half = { workspace = true }
intel-mkl-src = { workspace = true, optional = true }
pyo3 = { version = "0.27", features = ["extension-module", "abi3-py313"] }
float8 = { workspace = true }

[build-dependencies]
pyo3-build-config = "0.27"

[features]
default = []
accelerate = ["dep:accelerate-src", "candle/accelerate"]
cuda = ["cuda-enabled", "candle/cuda"]
cuda-enabled = ["candle/cuda-enabled"]
cuda-dynamic-linking = ["cuda-enabled", "candle/cuda-dynamic-linking"]
cuda-dynamic-loading = ["cuda-enabled", "candle/cuda-dynamic-loading"]
cuda-static-linking = ["cuda-enabled", "candle/cuda-static-linking"]
mkl = ["mkl-enabled", "candle/mkl"]
mkl-enabled = ["dep:intel-mkl-src", "candle/mkl-enabled"]
mkl-static-linking = ["mkl-enabled", "candle/mkl-static-linking"]
mkl-dynamic-linking = ["mkl-enabled", "candle/mkl-dynamic-linking"]
onnx = ["dep:candle-onnx"]
