[package]
name = "candle-rocm-kernels"
version = "0.9.2"
edition = "2021"

description = "ROCm/HIP kernels for Candle"

[dependencies]
dirs = "5"
half = { version = "2.5.0", features = [
    "num-traits",
    "use-intrinsics",
    "rand_distr",
] }
rocm-rs = "0.5"
sha2 = "0.10"
thiserror = "2"
tracing = "0.1.41"

[dev-dependencies]
clap = { version = "4.5.49", features = ["derive"] }
anyhow = "1"
rand = "0.9.2"
rand_distr = "0.5.1"

[profile.profiling]
inherits = "release"
debug = 2
