[package]
name = "candle-transformers"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
readme = "README.md"

[dependencies]
accelerate-src = { workspace = true, optional = true }
byteorder = { workspace = true }
candle = { workspace = true }
candle-flash-attn = { workspace = true, optional = true }
candle-nn = { workspace = true }
fancy-regex = { workspace = true }
intel-mkl-src = { workspace = true, optional = true }
num-traits = { workspace = true }
rand = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_plain = { workspace = true }
tracing = { workspace = true }

[features]
default = []
accelerate = ["dep:accelerate-src", "candle/accelerate", "candle-nn/accelerate"]
cuda = ["cuda-enabled", "candle/cuda", "candle-nn/cuda"]
cuda-enabled = ["candle/cuda-enabled", "candle-nn/cuda-enabled"]
cuda-dynamic-linking = ["cuda-enabled", "candle/cuda-dynamic-linking", "candle-nn/cuda-dynamic-linking"]
cuda-dynamic-loading = ["cuda-enabled", "candle/cuda-dynamic-loading", "candle-nn/cuda-dynamic-loading"]
cuda-static-linking = ["cuda-enabled", "candle/cuda-static-linking", "candle-nn/cuda-static-linking"]
cudnn = ["candle/cudnn", "candle-nn/cudnn"]
flash-attn = ["cuda", "dep:candle-flash-attn"]
mkl = ["mkl-enabled", "candle/mkl", "candle-nn/mkl"]
mkl-enabled = ["dep:intel-mkl-src", "candle/mkl-enabled", "candle-nn/mkl-enabled"]
mkl-static-linking = ["mkl-enabled", "candle/mkl-static-linking", "candle-nn/mkl-static-linking"]
mkl-dynamic-linking = ["mkl-enabled", "candle/mkl-dynamic-linking", "candle-nn/mkl-dynamic-linking"]
metal = ["candle/metal", "candle-nn/metal"]
