[package]
name = "candle-transformers"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
readme = "README.md"

[dependencies]
accelerate-src = { workspace = true, optional = true }
byteorder = { workspace = true }
candle = { workspace = true }
candle-awq-kernels = { workspace = true, optional = true }
candle-flash-attn = { workspace = true, optional = true }
candle-gptq-kernels = { workspace = true, optional = true }
candle-nn = { workspace = true }
fancy-regex = { workspace = true }
intel-mkl-src = { workspace = true, optional = true }
num-traits = { workspace = true }
rand = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_plain = { workspace = true }
tracing = { workspace = true }

[features]
default = []
accelerate = ["dep:accelerate-src", "candle/accelerate", "candle-nn/accelerate"]
cuda = ["candle/cuda", "candle-nn/cuda"]
cudnn = ["candle/cudnn", "candle-nn/cudnn"]
awq-cuda = ["cuda", "dep:candle-awq-kernels", "candle-awq-kernels/cuda"]
awq-metal = ["metal", "dep:candle-awq-kernels", "candle-awq-kernels/metal"]
flash-attn = ["cuda", "dep:candle-flash-attn"]
gptq-cuda = ["cuda", "dep:candle-gptq-kernels", "candle-gptq-kernels/cuda"]
gptq-metal = ["metal", "dep:candle-gptq-kernels", "candle-gptq-kernels/metal"]
mkl = ["dep:intel-mkl-src", "candle/mkl", "candle-nn/mkl"]
metal = ["candle/metal", "candle-nn/metal"]
metal-debug-labels = ["metal", "candle/metal-debug-labels", "candle-nn/metal-debug-labels"]
