[package]
name = "candle-utils"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
readme = "README.md"

[dependencies]
# anyhow = { workspace = true }
candle = { workspace = true }
candle-nn = { workspace = true }
candle-transformers = { workspace = true }
hf-hub = { workspace = true }
serde_json = { workspace = true }
tokenizers = { workspace = true }
